# intercompany-dispute-openenv

./: .env.example  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  sample_inference.py
.github/workflows/: deploy-hf.yml
agent/: prompts.py  tracker.py
build_plan/: intercompany_dispute_env_build_plan.md  phase_01_project_scaffold.md  phase_02_domain_models.md  phase_03_service_layer.md  phase_04_environment_core.md  phase_05_easy_task.md  phase_06_medium_task.md  phase_07_hard_task.md  phase_08_hardening.md  phase_09_deploy.md
domain/: __init__.py  document_models.py  enums.py  ledger_models.py  money.py  scenario_models.py
graders/: __init__.py  base.py  easy_grader.py  hard_grader.py  medium_grader.py
requirements_n_scheme/: hackathon_details.md  idea.md
scripts/: smoke_eval.py
seed_data/easy/: benchmark.json  smoke.json
seed_data/hard/: benchmark.json  smoke.json
seed_data/medium/: benchmark.json  smoke.json
server/: Dockerfile  __init__.py  app.py  environment.py
services/: __init__.py  audit_service.py  document_service.py  ledger_service.py  legal_service.py  matching_service.py  treasury_service.py
tasks/: __init__.py
tests/: __init__.py  test_edge_cases.py  test_environment.py  test_graders.py  test_models.py  test_services.py
